# Xenon-Engine

./: '  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  ProjectOptions.cmake  README.md  README_BuildL.md  TODO  stats
Libs/ArgonDevTools/: CMakeLists.txt  logger.cpp  logger.hpp
ReadmeAssets/: README_BuildL.md  README_BuildW.md
ReadmeDocumentation/: AppCore.md  Docs.md  ECS.md  ResourcesManagemnt.md  SceneManagement.md  SceneManager.md
Sandbox/: CMakeLists.txt
Sandbox/assets/: ShaderTest.glsl  gamedata.rp  testShader.glsl
Sandbox/src/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  chunkedArray.cpp  test.cpp
Tests/ECS/: chunkedArray.cpp  chunkedResource.cpp  componentMovement.cpp
Xenon/: CMakeLists.txt
Xenon/Libs/ArgonDevTools/: CMakeLists.txt  logger.cpp  logger.hpp
Xenon/include/: test.h  xenon.h  xenonDevTools.h
Xenon/libs/: CMakeLists.txt
Xenon/libs/adt/: CMakeLists.txt  async.cpp  async.hpp  logger.cpp  logger.hpp
Xenon/src/: CMakeLists.txt  api.h  appData.cpp  appData.h  application.cpp  application.h  core.h  dataStructures.h  entryPoint.h  shader.cpp  shader.h  window.cpp  window.h  xenon.cpp
Xenon/src/ECS/: ChunkedArray.hpp  Component.hpp  ComponentCluster.cpp  ComponentCluster.hpp  ComponentID.hpp  ComponentList.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentPool.hpp  ComponentsPool.hpp  Entity.hpp  LinkedArray.hpp  System.hpp  chunkedArray.hpp  chunkedPMR.cpp  chunkedPMR.hpp  component.cpp  component.hpp  componentCluster.cpp  componentCluster.hpp  componentContainerTuple.hpp  componentList.hpp  componentManager.cpp  componentManager.hpp  componentPool.hpp  componentReferenceList.hpp  componentTuple.hpp  containerTuple.hpp  entity.hpp  reference.hpp  systemTest.cpp  systemTest.hpp
Xenon/src/ECS/SystemImplementations/: System.hpp
Xenon/src/ECS/componentImplementations/: TestComp.hpp
Xenon/src/ECS/rework/: ChunkedArray.hpp  ComponentPool.hpp
Xenon/src/ECS/systemImplementations/: system.hpp
Xenon/src/System/: Transform.hpp  parenting.cpp  parenting.hpp
Xenon/src/System/Components/: Parenting.hpp  TestComp.hpp  Transform.hpp
Xenon/src/TEST/: test.cpp  test.hpp
Xenon/src/Xenon/: api.h  appConfig.hpp  application.cpp  application.hpp  entity.cpp  entity.hpp  entryPoint.hpp  logger.cpp  logger.hpp  logger_client.hpp  scene.cpp  scene.hpp
Xenon/src/core/: appData.cpp  appData.h  appData.hpp  application.cpp  application.h  application.hpp  entryPoint.h  entryPoint.hpp  event.cpp  event.hpp  globalData.cpp  globalData.hpp
Xenon/src/core/assets/: asset.cpp  asset.hpp  assetsManager.cpp  assetsManager.hpp
Xenon/src/core/event/: event.cpp  event.hpp
Xenon/src/core/input/: input.cpp  input.hpp
Xenon/src/core/resourcesManagment/: asset.cpp  asset.hpp  resource.cpp  resource.hpp  resourceManager.cpp  resourceManager.hpp
Xenon/src/devTools/: devTools.h  logger.cpp  logger.hpp  logger_core.hpp  profiler.cpp  profiler.hpp  timer.hpp  xenonDevTools.cpp
Xenon/src/devTools/logger/: logger.cpp  logger.hpp  logger_client.hpp  logger_core.hpp
Xenon/src/input/: input.cpp  input_api.hpp
Xenon/src/memory/: chunkedPMR.cpp  chunkedPMR.hpp  chunkedResource.cpp  chunkedResource.hpp  debugMemoryResource.cpp  debugMemoryResource.hpp
Xenon/src/pch/: CMakeLists.txt  pch.h
Xenon/src/rendering/: renderer2D_core.cpp  renderer2D_core.hpp  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  shader.hpp  texture.cpp  texture_core.cpp  texture_core.hpp
Xenon/src/scenes/: scene.cpp  scene.hpp  sceneManager.cpp  sceneManager.hpp
Xenon/src/temporary/: engDataStruct.hpp
Xenon/src/test/: test.cpp  test.hpp
Xenon/src/window/: window.cpp  window.h  window.hpp
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  CppCheck.cmake  PreventInSourceBuild.cmake
