include_directories(vendor/glad/include/glad)
include_directories(vendor/glad/include/KHR)
include_directories(vendor/glad/include)
include_directories(vendor/glfw/include/GLFW)
include_directories(vendor/glm)
include_directories(vendor/stb)

add_subdirectory(src)
add_subdirectory(libs)
add_subdirectory(vendor)
